--- a/src/main/java/overview.adoc
+++ b/src/main/java/overview.adoc
@@ -2,5 +2,5 @@
 
 A parser for generating documentation and source skeletons out of a flow DSL.
 
-@see https://github.com/flowdev/flowparser[Flow parser on Github^]
-@see http://flowdev.org[Flowdev Project^]
+@see https://github.com/flowdev/flowparser[Flow parser on Github]
+@see http://flowdev.org[Flowdev Project]
